Modified chosen styling.

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -38,7 +38,7 @@
         <h3><strong>Question 1</strong></h3>
         <h4>TEST QUESTION?</h4>
         <select class="my_select_box">
-            <option value="" disabled selected>Select your option</option>
+            <option value=""></option>
             <option value="volvo">Volvo</option>
             <option value="saab">Saab</option>
             <option value="opel">Opel</option>
@@ -47,7 +47,7 @@
         <h3><strong>Question 1</strong></h3>
         <h4>TEST QUESTION?</h4>
         <select class="my_select_box">
-            <option value="" disabled selected>Select your option</option>
+            <option value=""></option>
             <option value="volvo">Volvo</option>
             <option value="saab">Saab</option>
             <option value="opel">Opel</option>
@@ -56,7 +56,7 @@
         <h3><strong>Question 1</strong></h3>
         <h4>TEST QUESTION?</h4>
         <select class="my_select_box">
-            <option value="" disabled selected>Select your option</option>
+            <option value=""></option>
             <option value="volvo">Volvo</option>
             <option value="saab">Saab</option>
             <option value="opel">Opel</option>
@@ -65,7 +65,7 @@
         <h3><strong>Question 1</strong></h3>
         <h4>TEST QUESTION?</h4>
         <select class="my_select_box">
-            <option value="" disabled selected>Select your option</option>
+            <option value=""></option>
             <option value="volvo">Volvo</option>
             <option value="saab">Saab</option>
             <option value="opel">Opel</option>
@@ -74,7 +74,7 @@
         <h3><strong>Question 1</strong></h3>
         <h4>TEST QUESTION?</h4>
         <select class="my_select_box">
-            <option value="" disabled selected>Select your option</option>
+            <option value=""></option>
             <option value="volvo">Volvo</option>
             <option value="saab">Saab</option>
             <option value="opel">Opel</option>
@@ -83,7 +83,7 @@
         <h3><strong>Question 1</strong></h3>
         <h4>TEST QUESTION?</h4>
         <select class="my_select_box">
-            <option value="" disabled selected>Select your option</option>
+            <option value=""></option>
             <option value="volvo">Volvo</option>
             <option value="saab">Saab</option>
             <option value="opel">Opel</option>
@@ -92,7 +92,7 @@
         <h3><strong>Question 1</strong></h3>
         <h4>TEST QUESTION?</h4>
         <select class="my_select_box">
-            <option value="" disabled selected>Select your option</option>
+            <option value=""></option>
             <option value="volvo">Volvo</option>
             <option value="saab">Saab</option>
             <option value="opel">Opel</option>
@@ -101,7 +101,7 @@
         <h3><strong>Question 1</strong></h3>
         <h4>TEST QUESTION?</h4>
         <select class="my_select_box">
-            <option value="" disabled selected>Select your option</option>
+            <option value=""></option>
             <option value="volvo">Volvo</option>
             <option value="saab">Saab</option>
             <option value="opel">Opel</option>
@@ -110,7 +110,7 @@
         <h3><strong>Question 1</strong></h3>
         <h4>TEST QUESTION?</h4>
         <select class="my_select_box">
-            <option value="" disabled selected>Select your option</option>
+            <option value=""></option>
             <option value="volvo">Volvo</option>
             <option value="saab">Saab</option>
             <option value="opel">Opel</option>
@@ -119,12 +119,15 @@
         <h3><strong>Question 1</strong></h3>
         <h4>TEST QUESTION?</h4>
         <select class="my_select_box">
-            <option value="" disabled selected>Select your option</option>
+            <option value=""></option>
             <option value="volvo">Volvo</option>
             <option value="saab">Saab</option>
             <option value="opel">Opel</option>
             <option value="audi">Audi</option>
         </select>
+        <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle"></i> Submit
+        </button>
+        <hr>
         <footer>
             <div class="container">
                 <a href="/api/friends">API Friends List</a> | <a href="https://github.com/Gr8ChairmanMeow/FriendFinder">Github Repo</a>
