--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -125,7 +125,7 @@
             <option value="opel">Opel</option>
             <option value="audi">Audi</option>
         </select>
-        <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle"></i> Submit
+        <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit" data-toggle="modal" data-target="#myModal"><i class="fa fa-check-circle"></i> Submit
         </button>
         <hr>
         <footer>
@@ -133,6 +133,24 @@
                 <a href="/api/friends">API Friends List</a> | <a href="https://github.com/Gr8ChairmanMeow/FriendFinder">Github Repo</a>
             </div>
         </footer>
+        <!-- Modal -->
+        <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Friend Matched!</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p id="bestie"></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script type="text/javascript">
     // Question: What does this code do?
@@ -187,7 +205,9 @@
 
                     console.log(friendData[bestFriend[0][0]]);*/
 
-                    alert(friendData[bestFriend[0][0]].name + " | " + friendData[bestFriend[0][0]].image);
+                    //alert(friendData[bestFriend[0][0]].name + " | " + friendData[bestFriend[0][0]].image);
+
+                    $("#bestie").text(friendData[bestFriend[0][0]].name + " | " + friendData[bestFriend[0][0]].image);
 
                     // Loop through and display each of the customers
                     /*for (var i = 0; i < tableData.length; i++) {
@@ -276,7 +296,7 @@
             setTimeout(function() {
                 $.post("/api/friends", questionsObj).done(function(data) {
                     //console.log(data);
-                    
+
                 })
             }, 500);
 
