--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -142,8 +142,9 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Friend Matched!</h4>
                     </div>
-                    <div class="modal-body">
-                        <p id="bestie"></p>
+                    <div class="modal-body" style="width:100%;text-align:center">
+                        <p id="bestie" style="text-align: left"></p>
+                        <span id="bestiePic" style=""></span>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -166,10 +167,10 @@
             // The AJAX function uses the URL of our API to GET the data associated with it (initially set to localhost)
             $.ajax({ url: currentURL + "/api/friends", method: "GET" })
                 .done(function(friendData) {
-                    console.log(friendData);
+                    /*console.log(friendData);
                     console.log(user);
                     // Here we are logging the URL so we have access to it for troubleshooting
-                    console.log("URL: " + currentURL + "/api/tables");
+                    console.log("URL: " + currentURL + "/api/tables");*/
 
                     /*for (var i = 0; i < friendData.length; i++) {
                         
@@ -190,6 +191,10 @@
 
                     //var duplicateArr = matchArr;
                     var bestFriend = matchArr.sort(function(a, b) { return a[1] < b[1] });
+                    var score = Math.round(parseInt(bestFriend[0][1]/12)*100);
+                    var pic = document.createElement("img");  // Create with DOM
+                    $(pic).attr("src",friendData[bestFriend[0][0]].image);
+                    $(pic).attr("width",150);
 
                     //console.log(matchArr);
 
@@ -207,7 +212,8 @@
 
                     //alert(friendData[bestFriend[0][0]].name + " | " + friendData[bestFriend[0][0]].image);
 
-                    $("#bestie").text(friendData[bestFriend[0][0]].name + " | " + friendData[bestFriend[0][0]].image);
+                    $("#bestie").text(friendData[bestFriend[0][0]].name + " | " + score + "% match!");
+                    $("#bestiePic").html(pic);
 
                     // Loop through and display each of the customers
                     /*for (var i = 0; i < tableData.length; i++) {
