Completed questions and fixed score parsing error.

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -36,97 +36,97 @@
         <input type="text" name id="image" class="form-control" required>
         <hr>
         <h3><strong>Question 1</strong></h3>
-        <h4>TEST QUESTION?</h4>
+        <h4>What's your favorite food?</h4>
         <select class="my_select_box" id="q1">
             <option value=""></option>
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="opel">Opel</option>
-            <option value="audi">Audi</option>
+            <option value="pizza">Pizza</option>
+            <option value="burger">Burger</option>
+            <option value="noodles">Noodles</option>
+            <option value="steak">Steak</option>
+            <option value="vegan">Vegan</option>
         </select>
-        <h3><strong>Question 1</strong></h3>
-        <h4>TEST QUESTION?</h4>
+        <h3><strong>Question 2</strong></h3>
+        <h4>Do you have a favorite animal?</h4>
         <select class="my_select_box" id="q2">
             <option value=""></option>
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="opel">Opel</option>
-            <option value="audi">Audi</option>
+            <option value="cat">Cat</option>
+            <option value="dog">Dog</option>
+            <option value="lizard">Lizard</option>
+            <option value="bear">Bear</option>
         </select>
-        <h3><strong>Question 1</strong></h3>
-        <h4>TEST QUESTION?</h4>
+        <h3><strong>Question 3</strong></h3>
+        <h4>How often do you daydream?</h4>
         <select class="my_select_box" id="q3">
             <option value=""></option>
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="opel">Opel</option>
-            <option value="audi">Audi</option>
+            <option value="never">Never</option>
+            <option value="sometimes">Sometimes</option>
+            <option value="often">Often</option>
+            <option value="always">Always</option>
         </select>
-        <h3><strong>Question 1</strong></h3>
-        <h4>TEST QUESTION?</h4>
+        <h3><strong>Question 4</strong></h3>
+        <h4>Will the proletariat rise again?</h4>
         <select class="my_select_box" id="q4">
             <option value=""></option>
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="opel">Opel</option>
-            <option value="audi">Audi</option>
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+            <option value="maybe">maybe</option>
+            <option value="bernie">Bernie 2020</option>
         </select>
-        <h3><strong>Question 1</strong></h3>
-        <h4>TEST QUESTION?</h4>
+        <h3><strong>Question 5</strong></h3>
+        <h4>ALERTA, ALERTA, ALERTA ANTI-?</h4>
         <select class="my_select_box" id="q5">
             <option value=""></option>
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="opel">Opel</option>
-            <option value="audi">Audi</option>
+            <option value="taquitos">Taquitos</option>
+            <option value="facista">Facista</option>
+            <option value="huh">Huh?</option>
+            <option value="dead">Punk is dead.</option>
         </select>
-        <h3><strong>Question 1</strong></h3>
-        <h4>TEST QUESTION?</h4>
+        <h3><strong>Question 6</strong></h3>
+        <h4>Are you an indoor or outdoor person?</h4>
         <select class="my_select_box" id="q6">
             <option value=""></option>
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="opel">Opel</option>
-            <option value="audi">Audi</option>
+            <option value="indoor">Indoor</option>
+            <option value="outdoor">Outdoor</option>
+            <option value="neither">Neither</option>
+            <option value="both">Both</option>
         </select>
-        <h3><strong>Question 1</strong></h3>
-        <h4>TEST QUESTION?</h4>
+        <h3><strong>Question 7</strong></h3>
+        <h4>Which do you prefer?</h4>
         <select class="my_select_box" id="q7">
             <option value=""></option>
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="opel">Opel</option>
-            <option value="audi">Audi</option>
+            <option value="volvo">Video Games</option>
+            <option value="saab">Books</option>
+            <option value="opel">Movies</option>
+            <option value="futility">Contemplating the futility of existence.</option>
         </select>
-        <h3><strong>Question 1</strong></h3>
-        <h4>TEST QUESTION?</h4>
+        <h3><strong>Question 8</strong></h3>
+        <h4>Are you a morning person or night person?</h4>
         <select class="my_select_box" id="q8">
             <option value=""></option>
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="opel">Opel</option>
-            <option value="audi">Audi</option>
+            <option value="morning">Morning</option>
+            <option value="night">Night</option>
+            <option value="neither">Neither</option>
+            <option value="weak">Sleep is for the weak.</option>
         </select>
-        <h3><strong>Question 1</strong></h3>
-        <h4>TEST QUESTION?</h4>
+        <h3><strong>Question 9</strong></h3>
+        <h4>How do you feel about today's political climate?</h4>
         <select class="my_select_box" id="q9">
             <option value=""></option>
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="opel">Opel</option>
-            <option value="audi">Audi</option>
+            <option value="good">Good</option>
+            <option value="bad">Bad</option>
+            <option value="neutral">Neutral</option>
+            <option value="offended">I'm triggered/offended.</option>
         </select>
-        <h3><strong>Question 1</strong></h3>
-        <h4>TEST QUESTION?</h4>
+        <h3><strong>Question 10</strong></h3>
+        <h4>When you travel, where do you prefer to go?</h4>
         <select class="my_select_box" id="q10">
             <option value=""></option>
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="opel">Opel</option>
-            <option value="audi">Audi</option>
+            <option value="cities">Cities</option>
+            <option value="country">Country</option>
+            <option value="international">International</option>
+            <option value="broke">I'm broke.</option>
         </select>
-        <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit" data-toggle="modal" data-target="#myModal"><i class="fa fa-check-circle"></i> Submit
-        </button>
+        <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit" data-toggle="modal" data-target="#myModal"><i class="fa fa-check-circle"></i> Submit </button>
         <hr>
         <footer>
             <div class="container">
@@ -187,18 +187,19 @@
                             thisMatch = [index, weMatch];
                         }
                         matchArr.push(thisMatch)
-                    })
+                    });
 
                     //var duplicateArr = matchArr;
                     var bestFriend = matchArr.sort(function(a, b) { return a[1] < b[1] });
-                    var score = Math.round(parseInt(bestFriend[0][1]/12)*100);
-                    var pic = document.createElement("img");  // Create with DOM
-                    $(pic).attr("src",friendData[bestFriend[0][0]].image);
-                    $(pic).attr("width",150);
+                    var score = Math.round((bestFriend[0][1] / 12) * 100);
+                    var pic = document.createElement("img"); // Create with DOM
+                    $(pic).attr("src", friendData[bestFriend[0][0]].image);
+                    $(pic).attr("width", 150);
 
                     //console.log(matchArr);
+                    console.log(bestFriend[0][1]);
 
-                    /*console.log("_____________________");
+                    console.log("_____________________");
 
                     console.log(friendData);
 
@@ -208,7 +209,7 @@
 
                     console.log("+++++++++++++++++++++++++++++");
 
-                    console.log(friendData[bestFriend[0][0]]);*/
+                    console.log(friendData[bestFriend[0][0]]);
 
                     //alert(friendData[bestFriend[0][0]].name + " | " + friendData[bestFriend[0][0]].image);
 
@@ -302,7 +303,6 @@
             setTimeout(function() {
                 $.post("/api/friends", questionsObj).done(function(data) {
                     //console.log(data);
-
                 })
             }, 500);
 
