Added more users.

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -94,9 +94,9 @@
         <h4>Which do you prefer?</h4>
         <select class="my_select_box" id="q7">
             <option value=""></option>
-            <option value="volvo">Video Games</option>
-            <option value="saab">Books</option>
-            <option value="opel">Movies</option>
+            <option value="games">Video Games</option>
+            <option value="books">Books</option>
+            <option value="movies">Movies</option>
             <option value="futility">Contemplating the futility of existence.</option>
         </select>
         <h3><strong>Question 8</strong></h3>
@@ -197,7 +197,7 @@
                     $(pic).attr("width", 150);
 
                     //console.log(matchArr);
-                    console.log(bestFriend[0][1]);
+                    /*console.log(bestFriend[0][1]);
 
                     console.log("_____________________");
 
@@ -209,7 +209,7 @@
 
                     console.log("+++++++++++++++++++++++++++++");
 
-                    console.log(friendData[bestFriend[0][0]]);
+                    console.log(friendData[bestFriend[0][0]]);*/
 
                     //alert(friendData[bestFriend[0][0]].name + " | " + friendData[bestFriend[0][0]].image);
 
